[tool.poetry]
name = "douglas-security-manager"
version = "0.1.0"
description = ""
authors = ["none <none>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^36.0.1"
deafadder-container = "^0.5.0"
tinydb = "^4.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
